# xair-api-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __main__.py  config.toml  pyproject.toml  scripts.py  setup.py
examples/sends/: __main__.py
examples/xair-obs/: README.md  __main__.py
examples/xair_obs/: README.md  __main__.py  setup.py
mair/: __init__.py  bus.py  config.py  dca.py  errors.py  fx.py  kinds.py  lr.py  mair.py  meta.py  rtn.py  shared.py  strip.py  util.py
tests/: __init__.py  pre-commit.ps1  shared_tests.py  test_shared.py
tests/x32/: __init__.py  test_adapter.py
tests/xair/: __init__.py  pre-commit.ps1  test_shared.py
xair_api/: __init__.py  adapter.py  bus.py  config.py  dca.py  errors.py  fx.py  kinds.py  lr.py  meta.py  rtn.py  shared.py  strip.py  util.py  xair.py
