[tool.poetry]
name = "xair-api"
version = "1.1.1"
description = "Remote control Behringer X-Air | Midas MR mixers through OSC"
authors = ["onyx-and-iris <code@onyxandiris.online>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/onyx-and-iris/xair-api-python"

[tool.poetry.dependencies]
python = "^3.10"
python-osc = "^1.8.0"
tomli = { version = "^2.0.1", python = "<3.11" }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-randomly = "^3.12.0"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
obs = "examples.xair-obs.__main__:main"
xair = 'scripts:test_xair'
x32 = 'scripts:test_x32'
